Added discord posting/publishing support.

--- a/project-example.yml
+++ b/project-example.yml
@@ -7,11 +7,18 @@ packages:
       BOT_NAME: RandoBot
       MASTODON_API_URL: GETFROMMASTODON
       MASTODON_API_TOKEN: GETFROMMASTODON
+      MASTODON_POST_MODE: unlisted
       TWITCH_API_KEY: GETFROMTWITCH
       TWITCH_API_SECRET: GETFROMTWITCH
       TWITCH_EVENT_SECRET: MAKEYOUROWNABOUTTHISLENGTH
+      DISCORD_CLIENTID: GETFROMDISCORD
+      DISCORD_SECRET: GETFROMDISCORD
+      DISCORD_TOKEN: GETFROMDISCORD
+      DISCORD_GUILD: GETFROMDISCORD
+      DISCORD_CHANNEL: GETFROMDISCORD
       OVERRIDE_TOKEN: MAKEYOUROWNABOUTTHISLENGTH
     parameters: 
+      post_to_discord: false
       cross_instance_account_map:
         litui@gsg.live: 
           twitch_id: litui
