--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 Django>=4.1.3<5.0
 djangorestframework
 djangorestframework_simplejwt
+django_rest_client
+django-encrypted-model-fields
 django-storages
 django-filter
 django-environ
