--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,12 +32,14 @@
     "maplibre-gl": "^2.1.9",
     "medium-editor": "^5.23.3",
     "pinia": "^2.0.16",
+    "pinia-plugin-persistedstate": "^3.0.1",
     "register-service-worker": "^1.7.1",
     "sass": "^1.53.0",
     "vue": "^3.2.25",
     "vue-chartjs": "^4.1.1",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.14",
+    "vue-timer-hook": "^1.0.36",
     "vue-yandex-maps": "^0.12.3",
     "vuestic-ui": "^1.5.0"
   },
