--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@amcharts/amcharts5-geodata": "^5.0.3",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@gtm-support/vue-gtm": "^1.6.0",
+    "@vueuse/core": "^9.6.0",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "epic-spinners": "^2.0.0",
@@ -32,7 +33,6 @@
     "maplibre-gl": "^2.1.9",
     "medium-editor": "^5.23.3",
     "pinia": "^2.0.16",
-    "pinia-plugin-persistedstate": "^3.0.1",
     "register-service-worker": "^1.7.1",
     "sass": "^1.53.0",
     "vue": "^3.2.25",
