--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,14 +6,15 @@ django-encrypted-model-fields
 django-storages
 django-filter
 django-environ
-channels>=4.0.0
+channels[daphne]>=4.0.0
+channels_redis
+asgi_redis
 websockets
 git+https://github.com/truhlik/django-gsheets/#patch-1
 psycopg2-binary>=2.8
 boto3
 Mastodon.py>=1.7.0
-twitchAPI>=3.0.1
+twitchAPI>=3.2.0.1
 hikari>=2.0.0.dev112
 markdown
-gunicorn
 Pillow
