--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,16 +28,19 @@
     "epic-spinners": "^2.0.0",
     "flag-icons": "^6.6.4",
     "ionicons": "^4.6.3",
+    "konva": "^8.3.14",
     "leaflet": "^1.8.0",
     "leaflet-map": "^0.2.1",
     "maplibre-gl": "^2.1.9",
     "medium-editor": "^5.23.3",
+    "moment": "^2.29.4",
     "pinia": "^2.0.16",
     "register-service-worker": "^1.7.1",
     "sass": "^1.53.0",
     "vue": "^3.2.25",
     "vue-chartjs": "^4.1.1",
     "vue-i18n": "^9.1.10",
+    "vue-konva": "^3.0.2",
     "vue-router": "^4.0.14",
     "vue-timer-hook": "^1.0.36",
     "vue-yandex-maps": "^0.12.3",
