--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,11 +2,9 @@ FROM python:3
 LABEL org.opencontainers.image.source=https://github.com/litui/shrampybot
 LABEL org.opencontainers.image.description="ShrampyBot Backend"
 LABEL org.opencontainers.image.licenses=MIT
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+# ENV PYTHONDONTWRITEBYTECODE=1
+# ENV PYTHONUNBUFFERED=1
 
-# COPY ./yennifer.crt /usr/local/share/ca-certificates
-# RUN update-ca-certificates
 RUN useradd -ms /bin/bash shrampybot
 RUN addgroup shrampybot www-data
 
@@ -17,7 +15,9 @@ COPY requirements.txt /gsg/backend/
 
 RUN pip install --user -r requirements.txt
 
-COPY . /gsg/backend/
+COPY code/manage.py /gsg/backend/
+
+VOLUME [ "/gsg/backend/code" ]
 
 CMD ["./manage.py", "runserver", "0.0.0.0:8188"]
 
