--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: frontend/package-lock.json
-    - run: |
-        npm install
-        npm run build:ci
+    - run: npm install
+      working-directory: frontend
+    - run: npm run build:ci
       working-directory: frontend
