--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,7 +26,7 @@ jobs:
         cd backend
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        cd backend
-        python manage.py test
+    # - name: Run Tests
+    #   run: |
+    #     cd backend
+    #     python manage.py test
