--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,14 @@
 name: Deploy
 on:
-  push:
-    branches: [ main ]
+  pull_request:
+    types:
+      - closed
+    branches:
+      - main
 
 jobs:
   deploy-to-environment:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     
     steps:
