Trying to figure out why actions are being skipped.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,8 @@ on:
 jobs:
   deploy-to-prod:
     if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
+#   runs-on: ubuntu-latest
+    runs-on: self-hosted
     environment:
       name: production
       url: https://shrampybot.live
