--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,8 @@ on:
 jobs:
   deploy-to-prod:
     if: github.event.pull_request.merged == true
-#   runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
+    # runs-on: self-hosted
     environment:
       name: production
       url: https://shrampybot.live
