--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
     container_name: sb-database
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - ./data_${SB_ENV}:/var/lib/postgresql/data
       - ./log/postgresql:/var/log/postgresql
 
   sb-cache:
