--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       context: backend
     container_name: sb-backend
     command: 
-      - bash
+      - /bin/bash
       - -c
       - |
         sleep 10
