--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,9 @@ services:
       - /bin/bash
       - -c
       - |
-        sleep 10
+        sleep 5
+        wait-for-it -t 0 -h sb-cache -p 6379
+        wait-for-it -t 0 -h sb-database -p 5432
         ./manage.py migrate --no-input
         ./manage.py collectstatic --no-input
         ./manage.py runserver 0.0.0.0:8180
@@ -82,8 +84,8 @@ services:
       - bash
       - -c
       - |
-        sleep 10
         envsubst '$$SB_ENV,$$NGINX_HOSTNAME,$$NGINX_PORT,$$NGINX_SSL_CERTFILE,$$NGINX_SSL_KEYFILE' < /tmp/nginx.conf.template > /etc/nginx/conf.d/default.conf
+        wait-for-it -t 0 -h sb-backend -p 8180
         nginx -g 'daemon off;'
     volumes:
       - ./log/nginx_${SB_ENV}:/var/log/nginx
