--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,10 +7,10 @@ django-storages
 django-filter
 django-environ
 channels[daphne]>=4.0.0
+djangochannelsrestframework==1.1.0
 channels_redis
 asgi_redis
 websockets
-git+https://github.com/truhlik/django-gsheets/#patch-1
 psycopg2>=2.8
 boto3
 Mastodon.py>=1.7.0
