Added typescript generator for serializers.
- Started early refactor of service websocket consumer
- Continued effort on REST-ish patterns for websocket messages.
- Minor fixes and tweaks to the dockerfile and dependencies.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ djangochannelsrestframework==1.1.0
 channels_redis
 asgi_redis
 websockets
+django-typomatic
 psycopg2>=2.8
 boto3
 Mastodon.py>=1.7.0
