--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,6 @@ services:
       - /bin/bash
       - -c
       - |
-        sleep 5
         wait-for-it -t 0 -h sb-cache -p 6379
         wait-for-it -t 0 -h sb-database -p 5432
         ./manage.py migrate --no-input
@@ -39,6 +38,8 @@ services:
       - ./etc:/etc/gsg:ro
       - ./log/backend_${SB_ENV}:/var/log/gsg:rw
       - ./backend/code:/gsg/backend/code:ro
+      # For loading typescript definitions
+      - ./model-ts:/gsg/backend/model-ts:rw
     depends_on:
       - sb-database
       - sb-cache
@@ -58,6 +59,7 @@ services:
       - /bin/bash
       - -c
       - |
+        wait-for-it -t 0 -h sb-backend -p 8180
         if [[ $${SB_ENV} == 'development' ]]; then
           envsubst '$$FRONTEND_HOSTNAME,$$FRONTEND_PORT' < /gsg/frontend/.env.template > /gsg/frontend/.env
           npm run dev -- --host 0.0.0.0 --port ${NGINX_PORT}
@@ -66,6 +68,7 @@ services:
         fi
     volumes:
       - ./frontend/src:/gsg/frontend/src:ro
+      - ./model-ts:/gsg/frontend/model-ts
       - ./html_${SB_ENV}:/gsg/frontend/dist
 
   sb-webserver:
@@ -81,11 +84,14 @@ services:
       NGINX_SSL_PATH: '${NGINX_SSL_PATH}'
     container_name: sb-webserver
     command:
-      - bash
+      - /bin/bash
       - -c
       - |
         envsubst '$$SB_ENV,$$NGINX_HOSTNAME,$$NGINX_PORT,$$NGINX_SSL_CERTFILE,$$NGINX_SSL_KEYFILE' < /tmp/nginx.conf.template > /etc/nginx/conf.d/default.conf
         wait-for-it -t 0 -h sb-backend -p 8180
+        if [[ $${SB_ENV} == 'development' ]]; then
+          wait-for-it -t 0 -h sb-frontend -p ${NGINX_PORT}
+        fi
         nginx -g 'daemon off;'
     volumes:
       - ./log/nginx_${SB_ENV}:/var/log/nginx
