--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "medium-editor": "^5.23.3",
     "moment": "^2.29.4",
     "pinia": "^2.0.16",
+    "queue": "^6.0.2",
     "register-service-worker": "^1.7.1",
     "sass": "^1.53.0",
     "vue": "^3.2.25",
