added additional env line

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ NGINX_HOSTNAME=externally_accessible_hostname
 NGINX_PORT='443'
 NGINX_SSL_CERTFILE='certfile_development.pem'
 NGINX_SSL_KEYFILE='keyfile_development.pem'
+NGINX_SSL_PATH='./webserver/ssl'
